# darcsden

./: .boring  HCAR.tex  INSTALL  Main.hs  Makefile  README  README.md  darcsden.cabal  darcsden.god
DarcsDen/: DarcsChanges.hs  Data.hs  Dirty.hs  HackUtils.hs  Handler.hs  SSH.hs  State.hs  Util.hs  Validate.hs  WebUtils.hs
DarcsDen/Handler/: Repository.hs  User.hs
DarcsDen/Handler/Repository/: Browse.hs  Changes.hs  Forks.hs  Util.hs
DarcsDen/Pages/: Base.hs  Repository.hs  User.hs
DarcsDen/SSH/: Channel.hs  Crypto.hs  NetReader.hs  Pack.hs  Packet.hs  Sender.hs  Session.hs
DarcsDen/State/: Repository.hs  Session.hs  User.hs  Util.hs
DarcsDen/State/Old/: Repository0.hs  User0.hs  User1.hs
html/: base.html  index.html  init.html  login.html  register.html  repo-base.html  repo-blob.html  repo-changes.html  repo-delete.html  repo-edit.html  repo-fork.html  repo-log.html  repo-patch.html  repo.html  settings.html  user.html
lib/highlighting-kate/: highlighting-kate.cabal
lib/highlighting-kate/Text/Highlighting/Kate/: Syntax.hs
lib/highlighting-kate/Text/Highlighting/Kate/Syntax/: Go.hs  Io.hs  Slate.hs
lib/highlighting-kate/xml/: bash.xml
lib/text-press/: press.cabal
lib/text-press/Text/Press/: Parser.hs  Render.hs  Tags.hs  Types.hs
mypyg/: setup.py
mypyg/mypyg/: __init__.py
public/css/: main.css
public/images/: edit.xcf  explore.xcf  favicon.xcf  forkgif.xcf  issues.xcf  new.xcf  patches.xcf
public/js/: main.js
src/: PostHook.hs  SSHServer.hs  WebServer.hs
src/DarcsDen/: Darcs.hs  Debug.hs  Handler.hs  Util.hs  Validate.hs  WebUtils.hs
src/DarcsDen/Handler/: Repository.hs  User.hs
src/DarcsDen/Handler/Repository/: Browse.hs  Changes.hs  Forks.hs  Util.hs
src/DarcsDen/Pages/: Base.hs  Repository.hs  User.hs
src/DarcsDen/State/: Comment.hs  Issue.hs  Repository.hs  Session.hs  User.hs  Util.hs
templates/: base.st  browse.st  index.st  init.st  login.st  register.st  repo-blob.st  repo-changes-atom.st  repo-changes.st  repo-delete.st  repo-edit.st  repo-fork.st  repo-forks.st  repo-patch.st  repo.st  repobase.st  settings.st  user.st
