name:            darcsden
version:         0.3.0
synopsis:        Darcs web service
description:     DarcsDen is a website for hosting Darcs-2 repositories and collaborating with others.
cabal-version:   >=1.2
build-type:      Simple
license:         GPL
license-file:    LICENSE
author:          Alex Suraci
maintainer:      i.am@toogeneric.com
homepage:        http://darcsden.com/
category:        Web

executable darcsden
  main-is:       Main.hs

  if impl(ghc >= 6.12)
    ghc-options:   -Wall -threaded -fno-warn-unused-do-bind
  else
    ghc-options:   -Wall -threaded

  build-depends: base >= 4 && < 5,
                 base64-string,
                 bytestring,
                 CouchDB,
                 containers,
                 cryptohash,
                 darcs >= 2 && < 2.5,
                 directory,
                 filepath,
                 harp,
                 hashed-storage,
                 highlighting-kate,
                 hsp,
                 json,
                 mtl,
                 old-locale,
                 old-time,
                 pandoc,
                 process,
                 QuickCheck >= 2.0,
                 random,
                 redis,
                 ssh >= 0.2,
                 snap-core >= 0.2.12,
                 snap-server >= 0.2.12,
                 system-uuid,
                 split,
                 time,
                 transformers,
                 xhtml
