name:            darcsden
version:         0.3.0
synopsis:        Darcs web service
description:     DarcsDen is a website for hosting Darcs-2 repositories and collaborating with others.
cabal-version:   >=1.2
build-type:      Simple
license:         GPL
license-file:    LICENSE
author:          Alex Suraci
maintainer:      i.am@toogeneric.com
homepage:        http://darcsden.com/
category:        Web

source-repository   head
    type:           darcs
    location:       http://darcsden.com/alex/darcsden

executable darcsden
  hs-source-dirs:   src

  main-is:          WebServer.hs

  if impl(ghc >= 6.12)
    ghc-options:   -Wall -threaded -fno-warn-unused-do-bind
  else
    ghc-options:   -Wall -threaded

  build-depends:
    { base >= 4 && < 5
    , base64-string
    , bytestring
    , CouchDB
    , containers
    , darcs >= 2 && < 2.5
    , directory
    , filepath
    , harp
    , hashed-storage
    , hsp
    , json
    , mtl
    , old-locale
    , old-time
    , pandoc
    , process
    , QuickCheck >= 2.0
    , random
    , redis
    , SHA
    , ssh >= 0.2.5
    , snap-core >= 0.2.12
    , snap-server >= 0.2.12
    , system-uuid
    , split
    , time
    , transformers
    , xhtml
    }


executable darcsden-ssh
  hs-source-dirs:   src

  main-is:          SSHServer.hs

  if impl(ghc >= 6.12)
    ghc-options:   -Wall -threaded -fno-warn-unused-do-bind
  else
    ghc-options:   -Wall -threaded
